clusters/app.ci/vault/secret-collection-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci
  name: vault-secret-collection-manager
  annotations:
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: prow
      component: vault-secret-collection-manager
  template:
    metadata:
      labels:
        app: prow
        component: vault-secret-collection-manager
    spec:
      serviceAccountName: vault-secret-collection-manager
      containers:
      - name: oauth2-proxy
        resources:
          requests:
            memory: "1Gi"
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.2
        args:
        - --provider=oidc
        - --client-id=$(CLIENT_ID)
        - --client-secret-file=/var/oauth2/vault-secret-manager-secret
        - --email-domain=redhat.com
        - --oidc-issuer-url=https://idp.ci.openshift.org
        - --scope=openid email profile
        - --redirect-url=https://selfservice.vault.ci.openshift.org/oauth2/callback
        - --upstream=http://127.0.0.1:8080
        - --http-address=0.0.0.0:4180
        - --cookie-secret=$(COOKIE_SECRET)
        - --insecure-oidc-allow-unverified-email
        ports:
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: oauth2-secret
          mountPath: /var/oauth2
      - name: vault-secret-collection-manager
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_vault-secret-collection-manager_latest
        imagePullPolicy: Always
        args:
        - -vault-addr=https://vault.ci.openshift.org
        - -vault-role=vault-secret-collection-manager
        - -kv-store-prefix=kv/selfservice
        ports:
        - name: main
          containerPort: 4180
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
            scheme: HTTP
        resources:
          requests:
            memory: "1Gi"
            cpu: "20m"
      volumes:
      - name: oauth2-secret
        secret:
          secretName: vault-secret-collection-manager-oauth
---
apiVersion: v1
kind: Service
metadata:
  name: vault-secret-collection-manager
  namespace: ci
  labels:
    app: prow
    component: vault-secret-collection-manager
spec:
  ports:
  - port: 4180
    protocol: TCP
    targetPort: 4180
    name: frontend
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: metrics
  selector:
    component: vault-secret-collection-manager
  type: ClusterIP
