clusters/app.ci/vault/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=confirm
  name: vault
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    route.openshift.io/termination: passthrough
  name: vault
  namespace: vault
spec:
  ingressClassName: openshift-default
  tls:
    - secretName: vault-tls
      hosts:
        - vault.ci.openshift.org
  rules:
  - host: vault.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: vault
            port:
              number: 8300
        pathType: ImplementationSpecific
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  ports:
  - name: vault
    port: 8300
    protocol: TCP
  selector:
    vault-active: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: vault-statefulset
  namespace: vault
spec:
  ports:
  - port: 8300
    name: vault
  clusterIP: None
  selector:
    app: vault
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: vault
  annotations:
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
  name: vault
  namespace: vault
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vault
  serviceName: vault-statefulset
  template:
    metadata:
      labels:
        app: vault
      annotations:
        config.hcl: |
          api_addr = "https://vault.ci.openshift.org"
          listener "tcp" {
            address       = "127.0.0.1:8200"
            cluster_address = "[::]:8201"
            # The subpath proxy does the tls termination
            tls_disable   = "true"
          }

          storage "gcs" {
            bucket        = "vault-ci-openshift-clone"
            ha_enabled    = "true"
          }
          disable_mlock = "true"
          ui = "true"
          service_registration "kubernetes" {}
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - vault
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: vault
      terminationGracePeriodSeconds: 60
      priorityClassName: openshift-user-critical
      containers:
      - image: quay-proxy.ci.openshift.org/openshift/ci:ci_vault-subpath-proxy_latest
        name: subpath-proxy
        imagePullPolicy: Always
        args:
        - -kv-mount-path=kv
        - -listen-addr=0.0.0.0:8300
        - -tls-cert-file=/var/run/serving-cert/tls.crt
        - -tls-key-file=/var/run/serving-cert/tls.key
        - -vault-addr=http://127.0.0.1:8200
        - -vault-role=vault-subpath-proxy
        - --kubeconfig-dir=/etc/build-farm-credentials
        - --kubeconfig-suffix=config
        - -read-only
        volumeMounts:
        - name: serving-cert
          mountPath: /var/run/serving-cert
        - mountPath: /etc/build-farm-credentials
          name: build-farm-credentials
          readOnly: true
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sleep", "30"]
      - image: docker.io/hashicorp/vault:1.16.2
        name: unsealer
        command:
        - /bin/sh
        - -c
        - |-
          set -u
          export VAULT_ADDR=http://127.0.0.1:8200
          until vault status 2>&1 >/dev/null; do
            vault operator unseal $UNSEAL_KEY
          done
          echo "$(date --rfc-2822): Successfully unsealed, starting to sleep"
          sleep 365d
      - image: docker.io/hashicorp/vault:1.16.2
        name: vault
        args:
        - server
        - -config
        - /etc/vault/cfg/config.hcl
        resources:
          requests:
            memory: 200Mi
            cpu: 100m
        readinessProbe:
          httpGet:
            path: /v1/sys/health?standbyok=true
            port: 8300
            scheme: HTTPS
          timeoutSeconds: 5
          initialDelaySeconds: 300
          periodSeconds: 30
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sleep", "30"]
        ports:
        - name: https
          containerPort: 8300
        volumeMounts:
        - name: config
          mountPath: /etc/vault/cfg
        - name: gcs-key
          mountPath: /var/run/gcs-key
      volumes:
      - name: serving-cert
        secret:
          secretName: vault-tls
      - name: gcs-key
        secret:
          secretName: vault-gcs
      - name: config
        downwardAPI:
          items:
          - path: config.hcl
            fieldRef:
              fieldPath: metadata.annotations['config.hcl']
      - name: build-farm-credentials
        secret:
          secretName: config-updater
